--- a/src/main/resources/static/login-success.html
+++ b/src/main/resources/static/login-success.html
@@ -44,7 +44,7 @@
             color: #888;
         }
 
-        .main-btn {
+        .btn {
             display: inline-block;
             padding: 10px 20px;
             font-size: 16px;
@@ -54,9 +54,10 @@
             border-radius: 5px;
             cursor: pointer;
             text-decoration: none;
+            margin: 5px;
         }
 
-        .main-btn:hover {
+        .btn:hover {
             background-color: #45a049;
         }
 
@@ -64,6 +65,36 @@
             width: 100px;
             height: auto;
             margin-bottom: 20px;
+        }
+
+        /* 유저 정보 표시 스타일 */
+        #userInfoContainer {
+            margin-top: 20px;
+            padding: 15px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            display: none; /* 처음에는 숨겨둠 */
+            text-align: left;
+            background-color: #f9f9f9;
+        }
+
+        #userInfoContainer h2 {
+            font-size: 20px;
+            color: #333;
+            margin-top: 0;
+        }
+
+        #userInfoContent p {
+            margin: 5px 0;
+        }
+
+        .label {
+            font-weight: bold;
+            color: #333;
+        }
+
+        .value {
+            color: #555;
         }
     </style>
 </head>
@@ -73,8 +104,74 @@
     <img src="./images/U-Jeans.png" alt="Logo" class="logo-img">
     <h1>로그인 성공!</h1>
     <p class="message">환영합니다! 성공적으로 로그인되었습니다.</p>
-    <a href="/main" class="main-btn">메인 페이지로 이동</a>
+    <button class="btn" onclick="logout()">로그아웃</button>
+    <button class="btn" onclick="getUserInfo()">내 정보 보기</button>
+    <div id="userInfoContainer">
+        <h2>내 정보</h2>
+        <div id="userInfoContent"></div>
+    </div>
     <div class="footer">© 2024 Fitnus</div>
 </div>
+
+<script>
+    // 로그아웃 함수
+    function logout() {
+        fetch('/api/v1/auth/logout', {
+            method: 'POST',
+            credentials: 'include', // 쿠키를 포함하여 요청
+            headers: {
+                'Content-Type': 'application/json'
+            }
+        })
+            .then(response => {
+                if (response.ok) {
+                    alert('로그아웃되었습니다.');
+                    window.location.href = '/login';
+                } else {
+                    alert('로그아웃에 실패했습니다.');
+                }
+            })
+            .catch(error => console.error('Error:', error));
+    }
+
+    // 사용자 정보 요청 함수
+    function getUserInfo() {
+        console.log("Fetching user info...");
+
+        fetch('/api/v1/user/info', {
+            method: 'GET',
+            credentials: 'include', // 쿠키를 포함하여 요청
+            headers: {
+                'Content-Type': 'application/json'
+            }
+        })
+            .then(response => {
+                console.log("Response received:", response);
+                return response.json();
+            })
+            .then(data => {
+                console.log("Data received:", data);
+                if (data.success) {
+                    const user = data.data;
+                    const userInfo = `
+                    <p><span class="label">아이디:</span> <span class="value">${user.id}</span></p>
+                    <p><span class="label">이메일:</span> <span class="value">${user.email}</span></p>
+                    <p><span class="label">생성일:</span> <span class="value">${user.createAt}</span></p>
+                    <p><span class="label">역할:</span> <span class="value">${user.role}</span></p>
+                    <p><span class="label">상태:</span> <span class="value">${user.status}</span></p>
+                `;
+                    document.getElementById('userInfoContent').innerHTML = userInfo;
+                    document.getElementById('userInfoContainer').style.display = 'block';
+                    console.log("User info displayed.");
+                } else {
+                    alert('사용자 정보를 가져오는 데 실패했습니다.');
+                }
+            })
+            .catch(error => {
+                console.error('Error fetching user info:', error);
+                alert('정보를 불러오는 중 문제가 발생했습니다.');
+            });
+    }
+</script>
 </body>
 </html>
