--- a/module-common/src/main/resources/static/login-success.html
+++ b/module-common/src/main/resources/static/login-success.html
@@ -67,13 +67,12 @@
             margin-bottom: 20px;
         }
 
-        /* 유저 정보 표시 스타일 */
         #userInfoContainer {
             margin-top: 20px;
             padding: 15px;
             border: 1px solid #ddd;
             border-radius: 5px;
-            display: none; /* 처음에는 숨겨둠 */
+            display: none;
             text-align: left;
             background-color: #f9f9f9;
         }
@@ -96,29 +95,76 @@
         .value {
             color: #555;
         }
+
+        #paymentContainer {
+            margin-top: 20px;
+            padding: 15px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            display: none;
+            background-color: #f9f9f9;
+            text-align: left;
+        }
+
+        #paymentContainer h2 {
+            font-size: 20px;
+            color: #333;
+            margin-top: 0;
+        }
+
+        .input-field {
+            padding: 10px;
+            width: 80px;
+            margin-right: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
 <div class="container">
-    <!-- 로그인 성공 이미지 -->
     <img src="./images/U-Jeans.png" alt="Logo" class="logo-img">
     <h1>로그인 성공!</h1>
     <p class="message">환영합니다! 성공적으로 로그인되었습니다.</p>
-    <button class="btn" onclick="logout()">로그아웃</button>
+
+    <button class="btn" onclick="showPayment()">결제 시작</button>
     <button class="btn" onclick="getUserInfo()">내 정보 보기</button>
+    <button class="btn" onclick="logout()">로그아웃</button>
+
     <div id="userInfoContainer">
         <h2>내 정보</h2>
         <div id="userInfoContent"></div>
     </div>
+
+    <div id="paymentContainer">
+        <h2>결제 정보 입력</h2>
+        <label for="quantityInput">수량:</label>
+        <input type="number" id="quantityInput" class="input-field" placeholder="수량" min="1" value="1">
+
+        <!-- 옵션 체크박스 추가 -->
+        <div>
+            <input type="radio" id="option1" name="priceOption" value="100" onclick="setQuantity(100)">
+            <label for="option1">10만원 (100개)</label><br>
+
+            <input type="radio" id="option2" name="priceOption" value="220" onclick="setQuantity(220)">
+            <label for="option2">20만원 (220개)</label><br>
+
+            <input type="radio" id="option3" name="priceOption" value="345" onclick="setQuantity(345)">
+            <label for="option3">30만원 (345개)</label>
+        </div>
+
+        <button class="btn" onclick="startPayment()">결제 요청</button>
+    </div>
+
     <div class="footer">© 2024 Fitnus</div>
 </div>
 
 <script>
-    // 로그아웃 함수
     function logout() {
         fetch('/api/v1/auth/logout', {
             method: 'POST',
-            credentials: 'include', // 쿠키를 포함하여 요청
+            credentials: 'include',
             headers: {
                 'Content-Type': 'application/json'
             }
@@ -134,35 +180,27 @@
             .catch(error => console.error('Error:', error));
     }
 
-    // 사용자 정보 요청 함수
     function getUserInfo() {
-        console.log("Fetching user info...");
-
         fetch('/api/v1/user/info', {
             method: 'GET',
-            credentials: 'include', // 쿠키를 포함하여 요청
+            credentials: 'include',
             headers: {
                 'Content-Type': 'application/json'
             }
         })
-            .then(response => {
-                console.log("Response received:", response);
-                return response.json();
-            })
+            .then(response => response.json())
             .then(data => {
-                console.log("Data received:", data);
                 if (data.success) {
                     const user = data.data;
                     const userInfo = `
-                    <p><span class="label">아이디:</span> <span class="value">${user.id}</span></p>
-                    <p><span class="label">이메일:</span> <span class="value">${user.email}</span></p>
-                    <p><span class="label">생성일:</span> <span class="value">${user.createAt}</span></p>
-                    <p><span class="label">역할:</span> <span class="value">${user.role}</span></p>
-                    <p><span class="label">상태:</span> <span class="value">${user.status}</span></p>
-                `;
+                <p><span class="label">아이디:</span> <span class="value">${user.id}</span></p>
+                <p><span class="label">이메일:</span> <span class="value">${user.email}</span></p>
+                <p><span class="label">생성일:</span> <span class="value">${user.createAt}</span></p>
+                <p><span class="label">역할:</span> <span class="value">${user.role}</span></p>
+                <p><span class="label">상태:</span> <span class="value">${user.status}</span></p>
+            `;
                     document.getElementById('userInfoContent').innerHTML = userInfo;
                     document.getElementById('userInfoContainer').style.display = 'block';
-                    console.log("User info displayed.");
                 } else {
                     alert('사용자 정보를 가져오는 데 실패했습니다.');
                 }
@@ -170,6 +208,42 @@
             .catch(error => {
                 console.error('Error fetching user info:', error);
                 alert('정보를 불러오는 중 문제가 발생했습니다.');
+            });
+    }
+
+    function showPayment() {
+        document.getElementById('paymentContainer').style.display = 'block';
+    }
+
+    function setQuantity(quantity) {
+        document.getElementById("quantityInput").value = quantity;
+    }
+
+    function startPayment() {
+        const quantity = document.getElementById("quantityInput").value;
+        const orderDetails = {
+            quantity: parseInt(quantity, 10)
+        };
+
+        fetch('/api/v1/kakaopay/ready', {
+            method: 'POST',
+            credentials: 'include',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(orderDetails)
+        })
+            .then(response => response.json())
+            .then(data => {
+                if (data && data.next_redirect_pc_url) {
+                    window.location.href = data.next_redirect_pc_url;
+                } else {
+                    alert('결제를 시작하는 데 실패했습니다.');
+                }
+            })
+            .catch(error => {
+                console.error('Error starting payment:', error);
+                alert('결제를 시작하는 중 문제가 발생했습니다.');
             });
     }
 </script>
