--- a/module-common/src/main/resources/static/order_complete.html
+++ b/module-common/src/main/resources/static/order_complete.html
@@ -28,8 +28,10 @@
             max-width: 400px;
         }
 
-        .logo {
-            width: 80px;
+        .logo-img {
+            width: 100%; /* 이미지가 컨테이너의 가로 크기 전체를 사용 */
+            max-width: 200px; /* 최대 가로 크기를 제한 */
+            height: auto;
             margin-bottom: 20px;
         }
 
@@ -66,11 +68,11 @@
 </head>
 <body>
 <div class="container">
-    <img src="U-Jeans (1).png" alt="U-Jeans Logo" class="logo">
+    <img src="./images/U-Jeans.png" alt="Logo" class="logo-img">
     <h1>결제가 완료되었습니다!</h1>
     <p>주문이 성공적으로 처리되었습니다. 이용해주셔서 감사합니다.</p>
     <p class="thank-you">U-Jeans와 함께 멋진 경험을 즐기세요!</p>
-    <a href="/" class="button">홈으로 돌아가기</a>
+    <a href="login-success.html" class="button">홈으로 돌아가기</a>
 </div>
 </body>
 </html>
