--- a/module-common/src/main/resources/static/login-success.html
+++ b/module-common/src/main/resources/static/login-success.html
@@ -67,36 +67,7 @@
             margin-bottom: 20px;
         }
 
-        #userInfoContainer {
-            margin-top: 20px;
-            padding: 15px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            display: none;
-            text-align: left;
-            background-color: #f9f9f9;
-        }
-
-        #userInfoContainer h2 {
-            font-size: 20px;
-            color: #333;
-            margin-top: 0;
-        }
-
-        #userInfoContent p {
-            margin: 5px 0;
-        }
-
-        .label {
-            font-weight: bold;
-            color: #333;
-        }
-
-        .value {
-            color: #555;
-        }
-
-        #paymentContainer {
+        #userInfoContainer, #paymentContainer, #couponUsageContainer {
             margin-top: 20px;
             padding: 15px;
             border: 1px solid #ddd;
@@ -106,7 +77,7 @@
             text-align: left;
         }
 
-        #paymentContainer h2 {
+        #userInfoContainer h2, #paymentContainer h2, #couponUsageContainer h2 {
             font-size: 20px;
             color: #333;
             margin-top: 0;
@@ -130,6 +101,7 @@
 
     <button class="btn" onclick="showPayment()">결제 시작</button>
     <button class="btn" onclick="getUserInfo()">내 정보 보기</button>
+    <button class="btn" onclick="showCouponUsage()">쿠폰 사용하기</button>
     <button class="btn" onclick="logout()">로그아웃</button>
 
     <div id="userInfoContainer">
@@ -144,17 +116,24 @@
 
         <!-- 옵션 체크박스 추가 -->
         <div>
-            <input type="radio" id="option1" name="priceOption" value="100" onclick="setQuantity(100)">
+            <input type="radio" id="option1" name="priceOption" onclick="setQuantity(100)">
             <label for="option1">10만원 (100개)</label><br>
 
-            <input type="radio" id="option2" name="priceOption" value="220" onclick="setQuantity(220)">
+            <input type="radio" id="option2" name="priceOption" onclick="setQuantity(220)">
             <label for="option2">20만원 (220개)</label><br>
 
-            <input type="radio" id="option3" name="priceOption" value="345" onclick="setQuantity(345)">
+            <input type="radio" id="option3" name="priceOption" onclick="setQuantity(345)">
             <label for="option3">30만원 (345개)</label>
         </div>
 
         <button class="btn" onclick="startPayment()">결제 요청</button>
+    </div>
+
+    <div id="couponUsageContainer">
+        <h2>쿠폰 사용</h2>
+        <label for="usageQuantityInput">사용할 쿠폰 수량:</label>
+        <input type="number" id="usageQuantityInput" class="input-field" placeholder="수량" min="1" value="1">
+        <button class="btn" onclick="useCoupons()">쿠폰 사용</button>
     </div>
 
     <div class="footer">© 2024 Fitnus</div>
@@ -193,12 +172,13 @@
                 if (data.success) {
                     const user = data.data;
                     const userInfo = `
-                <p><span class="label">아이디:</span> <span class="value">${user.id}</span></p>
-                <p><span class="label">이메일:</span> <span class="value">${user.email}</span></p>
-                <p><span class="label">생성일:</span> <span class="value">${user.createAt}</span></p>
-                <p><span class="label">역할:</span> <span class="value">${user.role}</span></p>
-                <p><span class="label">상태:</span> <span class="value">${user.status}</span></p>
-            `;
+                    <p><span class="label">아이디:</span> <span class="value">${user.id}</span></p>
+                    <p><span class="label">이메일:</span> <span class="value">${user.email}</span></p>
+                    <p><span class="label">생성일:</span> <span class="value">${user.createAt}</span></p>
+                    <p><span class="label">역할:</span> <span class="value">${user.role}</span></p>
+                    <p><span class="label">상태:</span> <span class="value">${user.status}</span></p>
+                    <p><span class="label">보유 쿠폰 수량:</span> <span class="value">${user.totalCoupons}</span></p>
+                `;
                     document.getElementById('userInfoContent').innerHTML = userInfo;
                     document.getElementById('userInfoContainer').style.display = 'block';
                 } else {
@@ -215,14 +195,18 @@
         document.getElementById('paymentContainer').style.display = 'block';
     }
 
+    function showCouponUsage() {
+        document.getElementById('couponUsageContainer').style.display = 'block';
+    }
+
     function setQuantity(quantity) {
         document.getElementById("quantityInput").value = quantity;
     }
 
     function startPayment() {
-        const quantity = document.getElementById("quantityInput").value;
+        const quantity = parseInt(document.getElementById("quantityInput").value, 10);
         const orderDetails = {
-            quantity: parseInt(quantity, 10)
+            quantity: quantity
         };
 
         fetch('/api/v1/kakaopay/ready', {
@@ -244,6 +228,32 @@
             .catch(error => {
                 console.error('Error starting payment:', error);
                 alert('결제를 시작하는 중 문제가 발생했습니다.');
+            });
+    }
+
+    function useCoupons() {
+        const usageQuantity = parseInt(document.getElementById("usageQuantityInput").value, 10);
+
+        fetch('/api/v1/user/use-coupons', {
+            method: 'POST',
+            credentials: 'include',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({quantity: usageQuantity})
+        })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    alert(`${usageQuantity}개의 쿠폰을 성공적으로 사용했습니다.`);
+                    getUserInfo();
+                } else {
+                    alert(data.message || '쿠폰 사용에 실패했습니다.');
+                }
+            })
+            .catch(error => {
+                console.error('Error using coupons:', error);
+                alert('쿠폰을 사용하는 중 문제가 발생했습니다.');
             });
     }
 </script>
